{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "VehicleMovement",
            "id": "6eedeede-b695-4fa0-980e-657f0ad77e94",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "91f1e95e-06f0-4763-b3ec-025d1486774b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "7985619d-f4d5-4350-8482-eac60cbc717f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Acceleration",
                    "type": "Value",
                    "id": "a9da1abb-d9f6-473b-8d38-fb3a98874639",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62dcfb30-8880-432d-9508-39190ce750fb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6616d63e-16a6-4eb5-bd39-7a510a9442a5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "efc3f952-e133-4ec4-a64b-2fcfeb0560a5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "00798ced-610b-4b8f-a8c7-942d084095db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f7364572-53f1-4522-b5da-e277d541c1cf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}